<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="300dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/i_m_a_student"

            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/i_m_a_teacher"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_a_tour"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>