<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".LogActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/can_we_start_nlearning"
        android:textSize="43sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:gravity="center|top"
        android:orientation="horizontal">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            style="@style/FacebookLoginButtonStyle"
            android:layout_width="162dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:gravity="center"

            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="162dp"
            style="@style/GmailLoginButton"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_input"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your Name"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/transparent_bg_bordered_button"
        android:padding="8dp"
        android:text="Enroll me"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="30sp" />


</LinearLayout>